force-app/main/default/objects/Segmentation_Change_Request__c/Segmentation_Change_Request__c.object-meta.xml
<CustomObject>
    <description>Phase 2 - Object that allows users to add proposed Segmentation change and submit for approval.</description>
    <label>Sales Coverage Change Request</label>
    <nameField>
        <displayFormat>SCR-{00000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Coverage Change Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>