force-app/main/default/objects/Segmentation_Change_Request__c/fields/Hidden_Outgoing_Approver__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Outgoing_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hidden Outgoing Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Coverage_Change_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>