force-app/main/default/objects/Segmentation_Change_Request__c/fields/Proposed_Account_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Account_Manager_ID__c</fullName>
    <formula>Proposed_Account_Manager__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed Account Manager ID</label>
    <type>Text</type>
</CustomField>