force-app/main/default/objects/Segmentation_Change_Request__c/fields/Reasonforchange__c.field-meta.xml
<CustomField>
    <fullName>Reasonforchange__c</fullName>
    <description>The reason why the customer is to be transferred into your portfolio</description>
    <inlineHelpText>The reason why the customer is to be transferred into your portfolio</inlineHelpText>
    <label>Reason for change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABN Change</fullName>
            </value>
            <value>
                <fullName>Anomaly Request</fullName>
            </value>
            <value>
                <fullName>Customer Hierarchy</fullName>
            </value>
            <value>
                <fullName>Sales Specialist New Account Allocation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>