force-app/main/default/objects/Segmentation_Change_Request__c/fields/Request_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Request_Unique_ID__c</fullName>
    <description>.</description>
    <externalId>true</externalId>
    <label>Request Unique ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>