force-app/main/default/objects/Segmentation_Change_Request__c/fields/Revenue_by_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Revenue_by_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created to fetch the values for &apos;Traded in the Last 3 Months&apos; and &apos;Traded in the Last 6 Months&apos; fields.</description>
    <label>Revenue by Organisation</label>
    <referenceTo>Revenue_by_Organisation__c</referenceTo>
    <relationshipLabel>Sales Coverage Change Requests</relationshipLabel>
    <relationshipName>Sales_Coverage_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>