force-app/main/default/objects/Segmentation_Change_Request__c/fields/Sub_Reason_for_Change__c.field-meta.xml
<CustomField>
    <fullName>Sub_Reason_for_Change__c</fullName>
    <description>.</description>
    <label>Sub Reason for Change</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reasonforchange__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABN/Name Change</fullName>
            </value>
            <value>
                <fullName>BMS to Business Sales</fullName>
            </value>
            <value>
                <fullName>Channel Promotion (80/20)</fullName>
            </value>
            <value>
                <fullName>Customer Hierarchy Changes</fullName>
            </value>
            <value>
                <fullName>Customer Relocation</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Potential for Growth</fullName>
            </value>
            <value>
                <fullName>Rebalancing Portfolios</fullName>
            </value>
            <value>
                <fullName>Spend level Decreased</fullName>
            </value>
            <value>
                <fullName>Spend Level Increased</fullName>
            </value>
            <value>
                <fullName>TSA to Business Sales</fullName>
            </value>
            <value>
                <fullName>Spreading Bases</fullName>
                <isActive>false</isActive>
                <label>Spreading Bases</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>