force-app/main/default/objects/Segmentation_Change_Request__c/fields/System_Message__c.field-meta.xml
<CustomField>
    <fullName>System_Message__c</fullName>
    <formula>$Setup.SCCR_Setting__c.System_Message__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transfer Date</label>
    <type>Text</type>
</CustomField>