force-app/main/default/objects/Segmentation_Change_Request__c/fields/temp__c.field-meta.xml
<CustomField>
    <fullName>temp__c</fullName>
    <formula>Organisation__r.Owner.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>temp</label>
    <type>Text</type>
</CustomField>