force-app/main/default/objects/Segmentation_Change_Request__c/fields/Traded_in_the_Last_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Traded_in_the_Last_6_Months__c</fullName>
    <formula>Revenue_by_Organisation__r.Traded_In_Past_6_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Traded in the Last 6 Months</label>
    <type>Text</type>
</CustomField>