force-app/main/default/objects/Segmentation_Change_Request__c/recordTypes/Account_Manager_Change.recordType-meta.xml
<RecordType>
    <fullName>Account_Manager_Change</fullName>
    <active>false</active>
    <description>Request to change Account Manager within Sales Team.</description>
    <label>Account Manager Change</label>
</RecordType>