force-app/main/default/objects/Segmentation_Change_Request__c/recordTypes/Segmentation_Change.recordType-meta.xml
<RecordType>
    <fullName>Segmentation_Change</fullName>
    <active>true</active>
    <description>Request to change Sales Team &amp;/or Account Manager to another Sales Team</description>
    <label>Sales Team Change</label>
</RecordType>