force-app/main/default/objects/Segmentation_Change_Request__c/validationRules/Different_Old_Customer_And_Organisation.validationRule-meta.xml
<ValidationRule>
    <fullName>Different_Old_Customer_And_Organisation</fullName>
    <active>true</active>
    <description>Old Customer name can not be the same as the Organisation name</description>
    <errorConditionFormula>AND(
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
 RecordType.Name = &apos;Sales Team Change&apos;,
 Organisation__r.LEGACY_ID__c = Old_Customer_Name__r.LEGACY_ID__c  
)</errorConditionFormula>
    <errorMessage>Old Customer name can not be the same as the Organisation name</errorMessage>
</ValidationRule>