force-app/main/default/objects/Segmentation_Change_Request__c/validationRules/MPB_Known_Only_Customers_have_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>MPB_Known_Only_Customers_have_Change</fullName>
    <active>true</active>
    <description>MPB - Known Account Management - Not Allowed to raise a change request for a known customer</description>
    <errorConditionFormula>Organisation__r.Role_Type_Roll_Up__c =&quot;Known&quot;</errorConditionFormula>
    <errorDisplayField>Approval_Status__c</errorDisplayField>
    <errorMessage>You can not raise a change request for a Known.</errorMessage>
</ValidationRule>