force-app/main/default/objects/Segmentation_Change_Request__c/validationRules/Old_Customer_Required_For_ABN_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Old_Customer_Required_For_ABN_change</fullName>
    <active>true</active>
    <description>When the reason for change is ABN, you must provide an old customer</description>
    <errorConditionFormula>AND(
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;,  
 RecordType.Name = &apos;Sales Team Change&apos;,
 ISPICKVAL( Reasonforchange__c , &apos;ABN Change&apos;),
 ISBLANK( Old_Customer_Name__c )  
)</errorConditionFormula>
    <errorDisplayField>Old_Customer_Name__c</errorDisplayField>
    <errorMessage>When the reason for change is ABN, you must provide the name of the old Customer</errorMessage>
</ValidationRule>