force-app/main/default/objects/Segmentation_Change_Request__c/validationRules/Phase_2_Only_Customers_have_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Phase_2_Only_Customers_have_Change</fullName>
    <active>true</active>
    <errorConditionFormula>Organisation__r.Role_Type_Roll_Up__c =&quot;Prospect&quot;</errorConditionFormula>
    <errorDisplayField>Organisation__c</errorDisplayField>
    <errorMessage>You can not raise a change request for a Prospect.</errorMessage>
</ValidationRule>