force-app/main/default/objects/Segmentation_Change_Request__c/validationRules/Phase_2_Processed_Request_no_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Phase_2_Processed_Request_no_change</fullName>
    <active>true</active>
    <errorConditionFormula>text(PRIORVALUE(  Approval_Status__c))=&quot;Processed&quot;||text(PRIORVALUE( Approval_Status__c))=&quot;Cancelled&quot;</errorConditionFormula>
    <errorMessage>Processed or Cancelled Change Requests cannot be modified. Please raise another Request if needed.</errorMessage>
</ValidationRule>