force-app/main/default/objects/Segmentation_Change_Request__c/validationRules/Phase_2_require_info_if_reason_is_other.validationRule-meta.xml
<ValidationRule>
    <fullName>Phase_2_require_info_if_reason_is_other</fullName>
    <active>true</active>
    <errorConditionFormula>Text(Reason_for_Change__c )=&quot;Other&quot;&amp;&amp; LEN(Description__c)=0</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Please provide more description if the Reason for Change is Other.</errorMessage>
</ValidationRule>