force-app/main/default/objects/Segmentation_Change_Request__c/validationRules/Proposed_AM_must_be_Coverage_Sales.validationRule-meta.xml
<ValidationRule>
    <fullName>Proposed_AM_must_be_Coverage_Sales</fullName>
    <active>true</active>
    <errorConditionFormula>Not 
(Or(Proposed_Account_Manager__r.Profile.Name = &apos;Coverage Sales&apos;,
Proposed_Account_Manager__r.Profile.Name = &apos;BG Base&apos;, 
Proposed_Account_Manager__r.Profile.Name =&apos;Sales 3rd Party&apos;,
 
Proposed_Account_Manager__r.Profile.Name =&apos;Hub Users&apos;))</errorConditionFormula>
    <errorDisplayField>Proposed_Account_Manager__c</errorDisplayField>
    <errorMessage>Proposed Account Manager must be a Coverage Sales, Hub User or Sales 3rd Party user in system</errorMessage>
</ValidationRule>