force-app/main/default/objects/Segmentation_Change_Request__c/validationRules/Transfer_SCCR_to_Holding_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Transfer_SCCR_to_Holding_User</fullName>
    <active>false</active>
    <description>This rule will prevent transfer of an SCCR from a human Manager to a Holding User.</description>
    <errorConditionFormula>AND(( Proposed_Account_Manager__r.FirstName == &apos;Holding&apos; &amp;&amp; Proposed_Account_Manager__r.LastName == &apos;User&apos;), (Organisation__r.Owner.FirstName != &apos;Holding&apos; &amp;&amp;    Organisation__r.Owner.LastName != &apos;User&apos;))</errorConditionFormula>
    <errorDisplayField>Proposed_Account_Manager__c</errorDisplayField>
    <errorMessage>Holding User can&apos;t be the Proposed Account Manager</errorMessage>
</ValidationRule>