force-app/main/default/objects/Segmentation_Change_Request__c/listViews/My_SCCR_s2.listView-meta.xml
<ListView>
    <fullName>My_SCCR_s2</fullName>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>Hidden_Current_Org_Owner_Id__c</columns>
    <columns>Proposed_Account_Manager__c</columns>
    <columns>Proposed_Sales_Team__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <columns>Level2_Approver__c</columns>
    <columns>Date_Request_Sent__c</columns>
    <columns>Date_Request_Approved_Rejected__c</columns>
    <filterScope>Mine</filterScope>
    <label>My SCCR&apos;s</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_Users_Ex_SSSW</group>
    </sharedTo>
</ListView>